# sm-forensic

./: README.md  REPRODUCIBILITY.md
code_snapshot/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
code_snapshot/data/: README.md
code_snapshot/scripts/: demo_mock_pipeline.py  fetch_flywire_sm_connectome.py  make_fig4_final.py  run_attractor_assay.py
code_snapshot/src/smforensic/: __init__.py  adex.py  assays.py  config.py  connectome.py  flywire.py  plotting.py  stats.py  utils.py  validate.py
