[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smforensic"
version = "0.1.0"
description = "Forensic pipeline for connectome-to-dynamics hypothesis testing (case study: Drosophila Serpentine Medulla)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
flywire = ["fafbseg"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
